After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752001 - region and language dialog isn't usable using the keyboard alone
region and language dialog isn't usable using the keyboard alone
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Region & Language
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-06 00:40 UTC by kendell clark
Modified: 2015-07-07 16:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
common: Return the dialog if the activated row was already selected (1.95 KB, patch)
2015-07-07 16:08 UTC, Rui Matos
committed Details | Review
region: Return the dialog if the activated row was already selected (1.87 KB, patch)
2015-07-07 16:08 UTC, Rui Matos
committed Details | Review
region: Only return the dialog on enter if focus is on selected row (1.78 KB, patch)
2015-07-07 16:09 UTC, Rui Matos
committed Details | Review
common: Only return the dialog on enter if focus is on selected row (1.81 KB, patch)
2015-07-07 16:09 UTC, Rui Matos
committed Details | Review

Description kendell clark 2015-07-06 00:40:13 UTC
in the region andlanguage dialogin gnome control center, the dialog is accessible and navigable using the keyboard. However, the buttons and list items only activate if clicked on with the mouse. Pressing enter on the list items activates the "done" button, preventing keyboard only users from changing the language. This also affects the formats dialog, though the input source dialog works fine. A suggested fix would be to first press space bar on the item, language, format, etc to first mark it as active and then press enter to activate the done button.
Comment 1 Matthias Clasen 2015-07-06 11:28:23 UTC
There's multiple dialogs in this panel...you seem to be talking about the dialogs that come up when you activate Language or Formats (not the for adding input methods).

You're right that Enter just activates the Done button there. But what you are suggesting as the 'fix' is what works today: spacebar changes the selected item and activates the ... row.

I would suggest a more intuitive fix would be to make Enter only activate the Done button if the focus is on the row currently marked as selected, and activate the current row, otherwise.
Comment 2 Michael Catanzaro 2015-07-06 12:37:45 UTC
I agree with Matthias's proposal.
Comment 3 kendell clark 2015-07-06 20:05:07 UTC
This works for me. I'm not picky, so long as the dialog is usable using the keyboard. I'll even write up the documentation for it if you like, though it's probably not much more than, if you're using a keyboard, first press space before pressing the done button.
Comment 4 kendell clark 2015-07-06 20:07:33 UTC
wait, scratch that. I should've read all the comments. Make that, when you change the language, press enter when done, which is already documented, so no additional docs are needed.
Comment 5 Rui Matos 2015-07-07 16:08:50 UTC
Created attachment 307020 [details] [review]
common: Return the dialog if the activated row was already selected

This makes the dialog a bit friendlier to use.
Comment 6 Rui Matos 2015-07-07 16:08:57 UTC
Created attachment 307021 [details] [review]
region: Return the dialog if the activated row was already selected

This makes the dialog a bit friendlier to use.
Comment 7 Rui Matos 2015-07-07 16:09:05 UTC
Created attachment 307022 [details] [review]
region: Only return the dialog on enter if focus is on selected row

This makes the dialog easier to use via keyboard navigation since
otherwise we'd just return with the current selection on enter when
the user actually intended to change the selection.
Comment 8 Rui Matos 2015-07-07 16:09:11 UTC
Created attachment 307023 [details] [review]
common: Only return the dialog on enter if focus is on selected row

This makes the dialog easier to use via keyboard navigation since
otherwise we'd just return with the current selection on enter when
the user actually intended to change the selection.
Comment 9 Bastien Nocera 2015-07-07 16:13:29 UTC
Review of attachment 307020 [details] [review]:

> Return the dialog if the activated row was already selected

I don't understand what this means.
Comment 10 Bastien Nocera 2015-07-07 16:14:03 UTC
Review of attachment 307021 [details] [review]:

Same problem with the subject.
Comment 11 Bastien Nocera 2015-07-07 16:15:08 UTC
Review of attachment 307022 [details] [review]:

What's "returning the dialog"? Looks good otherwise.
Comment 12 Bastien Nocera 2015-07-07 16:16:15 UTC
Review of attachment 307023 [details] [review]:

Ditto.
Comment 13 Rui Matos 2015-07-07 16:59:13 UTC
Adjusted commit messages as agreed on IRC and pushed to both master
and 3.16