common: Dismiss dialog if the activated row was already ticked

This makes the dialog a bit friendlier to use.

https://bugzilla.gnome.org/show_bug.cgi?id=752001